security,setting init

--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -23,6 +23,7 @@
     <!-- START Nav wrapper-->
     <div class="nav-wrapper">
        <!-- START Left navbar-->
+       
        <ul class="nav navbar-nav">
           <li>
              <!-- Button used to collapse the left sidebar. Only visible on tablet and desktops-->
@@ -34,18 +35,11 @@
                 <em class="fa fa-navicon"></em>
              </a>
           </li>
-          <!-- START Messages menu (dropdown-list)-->
           <li class="dropdown dropdown-list">
-             
-             <!-- START Dropdown menu-->
-              
-             <!-- END Dropdown menu-->
-          </li>
-          <!-- END Messages menu (dropdown-list)-->
-           
+          </li>  
        </ul>
-       <!-- END Left navbar-->
-       <!-- START Right Navbar-->
+       
+
        <ul class="nav navbar-nav navbar-right">
           <!-- Search icon-->
           <li>
@@ -54,118 +48,20 @@
                 <em class="fa f"></em>
              </a>
           </li>
-          <li>
-            <a href="#" data-toggle="navbar-search">
-               <em class="fa fa-search"></em>
+          
+         <li class="dropdown" style="margin-right: 20px;">
+            <a href="#" data-toggle="dropdown" data-play="fadeIn" class="dropdown-toggle">
+               <em class="fa fa-user"></em>
             </a>
+            <ul class="dropdown-menu">
+               <li><a class="router" href="pages/login.html">Login</a>
+               </li>
+               <li><a class="router" href="views/setting.html">Settings</a>
+               </li>
+            </ul>
          </li>
-          <!-- START Alert menu-->
-          <li class="dropdown dropdown-list">
-             <a href="#" data-toggle="dropdown" data-play="fadeIn" class="dropdown-toggle">
-                <em class="fa fa-bell-o"></em>
-                <div class="label label-info">35</div>
-             </a>
-             <!-- START Dropdown menu-->
-             <ul class="dropdown-menu">
-                <li>
-                   <!-- START list group-->
-                   <div class="list-group">
-                      <!-- list item-->
-                      <a href="#" class="list-group-item">
-                         <div class="media">
-                            <div class="pull-left">
-                               <em class="fa fa-envelope-o fa-2x text-success"></em>
-                            </div>
-                            <div class="media-body clearfix">
-                               <div class="media-heading">Unread messages</div>
-                               <p class="m0">
-                                  <small>You have 10 unread messages</small>
-                               </p>
-                            </div>
-                         </div>
-                      </a>
-                      <!-- list item-->
-                      <a href="#" class="list-group-item">
-                         <div class="media">
-                            <div class="pull-left">
-                               <em class="fa fa-cog fa-2x"></em>
-                            </div>
-                            <div class="media-body clearfix">
-                               <div class="media-heading">New settings</div>
-                               <p class="m0">
-                                  <small>There are new settings available</small>
-                               </p>
-                            </div>
-                         </div>
-                      </a>
-                      <!-- list item-->
-                      <a href="#" class="list-group-item">
-                         <div class="media">
-                            <div class="pull-left">
-                               <em class="fa fa-fire fa-2x"></em>
-                            </div>
-                            <div class="media-body clearfix">
-                               <div class="media-heading">Updates</div>
-                               <p class="m0">
-                                  <small>There are
-                                     <span class="text-primary">2</span>new updates available</small>
-                               </p>
-                            </div>
-                         </div>
-                      </a>
-                      <!-- last list item -->
-                      <a href="#" class="list-group-item">
-                         <small>Unread notifications</small>
-                         <span class="badge">14</span>
-                      </a>
-                   </div>
-                   <!-- END list group-->
-                </li>
-             </ul>
-             <!-- END Dropdown menu-->
-          </li>
-          <!-- END Alert menu-->
-          <!-- START User menu-->
-          <li class="dropdown">
-             <a href="#" data-toggle="dropdown" data-play="fadeIn" class="dropdown-toggle">
-                <em class="fa fa-tencent-weibo"></em>
-             </a>
-             <!-- START Dropdown menu-->
-             <ul class="dropdown-menu">
-                <li>
-                   <div class="p">
-                      <p>Overall progress</p>
-                      <div class="progress progress-striped progress-xs m0">
-                         <div role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-success progress-70">
-                            <span class="sr-only">70% Complete</span>
-                         </div>
-                      </div>
-                   </div>
-                </li>
-                <li class="divider"></li>
-                <li><a class="router" href="#profile">Profile</a>
-                </li>
-                <li><a class="router" href="#setting">Settings</a>
-                </li>
-                <li><a class="router" href="#noti">Notifications<div class="label label-info pull-right">5</div></a>
-                </li>
-                <li><a class="router" href="#message">Messages<div class="label label-danger pull-right">10</div></a>
-                </li>
-                <li><a class="router" href="#logout">Logout</a>
-                </li>
-             </ul>
-             <!-- END Dropdown menu-->
-          </li>
-          <!-- END User menu-->
-          <!-- START Contacts button-->
-          <li>
-             <a href="#" data-toggle-state="offsidebar-open">
-                <em class="fa fa-comment-o"></em>
-             </a>
-          </li>
-          <!-- END Contacts menu-->
        </ul>
-       <!-- END Right Navbar-->
+       
     </div>
     <!-- END Nav wrapper-->
     <!-- START Search form-->
