--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,13 +5,7 @@
         <small>Subtitle</small>
     </h3>
 
-    <a href="pages/login.html"><button>login</button></a>
-    
     <div class="row">
-        <div class="col-lg-12">
-            <p>인스턴스가 아직 없습니다. 클라우드를 새로 만드세요</p>
-        </div>
-        <p>이렇게 표현하는게 더 좋을듯 , 만약 서버 있다면 바로 cloud_list </p>
         <div class="panel-body">
             <div class="table-responsive">
                <table class="table table-hover">
@@ -30,12 +24,14 @@
                </table>
             </div>
          </div>
+    </div>
 
+    <div class="container">
+      <button onclick="return dashboard.add_cloud()" class="mainbtn">add cloud</button>
 
     </div>
 
-
-    <button onclick="return dashboard.add_cloud()" class="mainbtn">add cloud</button>
+    
 </div>
 
 <footer>&copy; 2014 - Wintermin</footer>
