--- a/templates/_left-side.html
+++ b/templates/_left-side.html
@@ -22,11 +22,21 @@
                      <span class="item-text">PriceView</span>
                   </a>
                </li>
-                <!-- <li>
-                   <a onclick="return route('cloud_list')"  title="Login" data-toggle="" class="no-submenu">
-                      <span class="item-text">클라우드</span>
-                   </a>
-                </li> -->
+               <li>
+                  <a onclick="return route('security_group')"  title="security_group" data-toggle="" class="no-submenu">
+                     <span class="item-text">security_group</span>
+                  </a>
+               </li>
+               <li>
+                  <a onclick="return route('security_detail')"  title="security_detail" data-toggle="" class="no-submenu">
+                     <span class="item-text">security_detail</span>
+                  </a>
+               </li>
+               <li>
+                  <a onclick="return route('security_edit')"  title="security_edit" data-toggle="" class="no-submenu">
+                     <span class="item-text">security_edit</span>
+                  </a>
+               </li>
                 
              </ul>
              <!-- END SubMenu item-->
