--- a/views/cloud_list.html
+++ b/views/cloud_list.html
@@ -1,5 +1,10 @@
    <style>  
- 
+   td a { 
+      display: block; 
+      border: 1px solid black;
+      padding: 16px; 
+   }
+
    </style>  
          <!-- START Page content-->
          <div class="main-content">
@@ -11,7 +16,6 @@
             <div class="row">
                <div class="col-lg-12">
                   <div class="panel panel-default">
-                     <!-- <div class="panel-heading">Hover Rows</div> -->
                      <div class="panel-body">
                         <div class="table-responsive">
                            <table class="table table-hover">
@@ -53,8 +57,7 @@
             
 
          </div>
-         <!-- END Page content-->
-         <!-- START Page footer-->
+         
          <footer>&copy; 2014 - Wintermin</footer>
          <!-- END Page Footer-->
  
