--- a/views/priceview.html
+++ b/views/priceview.html
@@ -1,15 +1,4 @@
 <style>
-    /* .btn_group button{ 
-        border: 1px solid #31ba85;
-        background-color: rgba(0,0,0,0); 
-        color: #31ba85;
-        padding: 5px 10px;  
-        outline: none;
-        } */
-    /* .btn_group button:hover{
-        color: white;
-        background-color: #31ba85;
-    } */
     #groupbtn1{ 
         border-top-left-radius: 5px; 
         border-bottom-left-radius: 5px; 
@@ -91,196 +80,86 @@
 
 
 <div class="main-content">
-    <h1 style="font-weight: lighter;">price view</h1>
-
-
+  <div style="margin-bottom: 10px;">
+    <h3>BILLING
+      <br>
+      <small>Make Payment</small>
+    </h3>
+  </div>
+    
     <div class="tabContainer">
         <div class="btn_group">
             <button id="groupbtn1" onclick="showPanel(0,'#31ba85')">크레딧 충전</button>
             <button id="groupbtn2" onclick="showPanel(1,'#31ba85')">금액 납부</button>
         </div>
 
-        
         <div class="tabPanel">
             <div class="col-xs-12" style="float: left; margin: 10px 0px;">
-                <div class="col-xs-1">
-                <p>현재 잔액</p>
-                </div>
-                <div class="col-xs-11">
+              <fieldset>
+                <div class="form-group">
+                   <label for="input-id-1" class="col-sm-1 control-label">현재잔액</label>
+                   <div class="col-sm-4">
                     <p style="margin-left: 2px; font-weight: bold; font-size: large; display: inline;">0</p> 
                     <p style="display: inline;">KRW</p>
+                   </div>
                 </div>
+             </fieldset>
             </div>
             
-
-                
             <div class="col-xs-12" style="float: left; margin: 10px 0px;">
-                <div class="col-xs-1">
-                    <p style="display:inline; margin-right: 10px;">예금주</p>
+              <fieldset>
+                <div class="form-group">
+                   <label for="input-id-1" class="col-sm-1 control-label">예금주</label>
+                   <div class="col-sm-4">
+                      <input id="input-id-1" type="text" class="form-control">
+                   </div>
                 </div>
-                <div class="col-xs-11">
-                    <input type="text">
+             </fieldset>
+            </div>
+
+            <div class="col-xs-12">
+              <fieldset class="last-child">
+                <div class="form-group">
+                   <label class="col-sm-1 control-label">예금주 은행</label>
+                   <div class="col-sm-4">
+                      <select name="account" class="form-control m-b">
+                         <option>카카오뱅크</option>
+                         <option>하나은행</option>
+                         <option>우리은행</option>
+                         <option>수협</option>
+                         <option>농협</option>
+                         <option>한국시티은행</option>
+                         <option>한국투자증권</option>
+                      </select>
+                   </div>
                 </div>
+             </fieldset>
+            </div>
+
+            <div class="col-xs-12">
+              <fieldset class="last-child">
+                <div class="form-group">
+                   <label class="col-sm-1 control-label">크레딧 선택</label>
+                   <div class="col-sm-4">
+                      <select name="account" class="form-control m-b">
+                         <option>5000KRW</option>
+                         <option>10000KRW</option>
+                         <option>15000KRW</option>
+                         <option>50000KRW</option>
+                      </select>
+                   </div>
+                </div>
+             </fieldset>
             </div>
 
             
-            <div class="col-xs-12" style="float: left; margin: 10px 0px;">
-                <div class="col-xs-1">
-                    <p style="display:inline; margin-right: 10px;">예금주 은행</p>
-                </div>
-                <div class="col-xs-11">
-                    <div class="container">
-                        <div class="select-box">
-                          <div class="options-container">
-                            <div class="option">
-                                <input type="radio" class="radio" id="카카오뱅크" name="category" />
-                                <label for="카카오뱅크">카카오뱅크</label>
-                              </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="신한은행" name="category" />
-                              <label for="신한은행">신한은행</label>
-                            </div>
-        
-                            <div class="option">
-                              <input type="radio" class="radio" id="우리은행" name="category" />
-                              <label for="우리은행">우리은행</label>
-                            </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="농협" name="category" />
-                              <label for="농협">농협</label>
-                            </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="수협" name="category" />
-                              <label for="수협">수협</label>
-                            </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="하나은행" name="category" />
-                              <label for="하나은행">하나은행</label>
-                            </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="한국시티은행" name="category" />
-                              <label for="한국시티은행">한국시티은행</label>
-                            </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="SC제일은행" name="category" />
-                              <label for="SC제일은행">SC제일은행</label>
-                            </div>
-                          </div>
-                          <div class="selected">
-                            은행 선택
-                          </div>
-                        </div>
-                      </div>
-                </div>
-            </div>
-
-            <div class="col-xs-12" style="float: left; margin: 10px 0px;">
-              <div class="col-xs-1">
-                  <p style="display:inline; margin-right: 10px;">예금주 은행</p>
-              </div>
-              <div class="col-xs-11">
-                  <div class="container">
-                      <div class="select-box">
-                        <div class="options-container">
-                          <div class="option">
-                              <input type="radio" class="radio" id="카카오뱅크" name="category" />
-                              <label for="카카오뱅크">카카오뱅크</label>
-                            </div>
-                
-                          <div class="option">
-                            <input type="radio" class="radio" id="신한은행" name="category" />
-                            <label for="신한은행">신한은행</label>
-                          </div>
-      
-                          <div class="option">
-                            <input type="radio" class="radio" id="우리은행" name="category" />
-                            <label for="우리은행">우리은행</label>
-                          </div>
-                
-                          <div class="option">
-                            <input type="radio" class="radio" id="농협" name="category" />
-                            <label for="농협">농협</label>
-                          </div>
-                
-                          <div class="option">
-                            <input type="radio" class="radio" id="수협" name="category" />
-                            <label for="수협">수협</label>
-                          </div>
-                
-                          <div class="option">
-                            <input type="radio" class="radio" id="하나은행" name="category" />
-                            <label for="하나은행">하나은행</label>
-                          </div>
-                
-                          <div class="option">
-                            <input type="radio" class="radio" id="한국시티은행" name="category" />
-                            <label for="한국시티은행">한국시티은행</label>
-                          </div>
-                
-                          <div class="option">
-                            <input type="radio" class="radio" id="SC제일은행" name="category" />
-                            <label for="SC제일은행">SC제일은행</label>
-                          </div>
-                        </div>
-                        <div class="selected">
-                          은행 선택
-                        </div>
-                      </div>
-                    </div>
-              </div>
-          </div>
-          
+            
+            
+            
 
 
-            <div class="col-xs-12" style="float: left; margin: 10px 0px;">
-                <div class="col-xs-1">
-                    <p style="display:inline; margin-right: 10px;">크레딧 선택</p>
-                </div>
-                <div class="col-xs-11">
-                    <div class="container">
-                        <div class="select-box">
-                          <div class="options-container">
-                            <div class="option">
-                                <input type="radio" class="radio" id="5000원" name="category" />
-                                <label for="5000원">5000원</label>
-                              </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="10000원" name="category" />
-                              <label for="10000원">10000원</label>
-                            </div>
-
-                            <div class="option">
-                              <input type="radio" class="radio" id="15000원" name="category" />
-                              <label for="15000원">15000원</label>
-                            </div>
-    
-                            <div class="option">
-                              <input type="radio" class="radio" id="20000원" name="category" />
-                              <label for="20000원">20000원</label>
-                            </div>
-                  
-                            <div class="option">
-                              <input type="radio" class="radio" id="50000원" name="category" />
-                              <label for="50000원">50000원</label>
-                            </div>
-                          </div>
-                          <div class="selected">
-                            충전할 요금을 선택하세요
-                          </div>
-                        </div>
-                      </div>
-                </div>
-            </div>
+            
             <div class="col-xs-6">
-              
-              
               <div class="container">
                 <button class="mainbtn">크레딧 충전 요청</button>
               </div>
