--- a/templates/_left-side.html
+++ b/templates/_left-side.html
@@ -13,27 +13,27 @@
              <!-- START SubMenu item-->
              <ul class="nav collapse in">
                 <li>
-                   <a href="#dashboard" title="Landing" data-toggle="" class="no-submenu">
+                   <a href="dashboard.html" title="Landing" data-toggle="" class="no-submenu">
                       <span class="item-text">대시보드</span>
                    </a>
                 </li>
                 <li>
-                  <a href="#priceview" title="priceview" data-toggle="" class="no-submenu">
+                  <a href="priceview.html" title="priceview" data-toggle="" class="no-submenu">
                      <span class="item-text">PriceView</span>
                   </a>
                </li>
                <li>
-                  <a onclick="return route('security_group')"  title="security_group" data-toggle="" class="no-submenu">
+                  <a href="security_group.html"  title="security_group" data-toggle="" class="no-submenu">
                      <span class="item-text">security_group</span>
                   </a>
                </li>
                <li>
-                  <a onclick="return route('security_detail')"  title="security_detail" data-toggle="" class="no-submenu">
+                  <a href="security_detail.html"  title="security_detail" data-toggle="" class="no-submenu">
                      <span class="item-text">security_detail</span>
                   </a>
                </li>
                <li>
-                  <a onclick="return route('security_edit')"  title="security_edit" data-toggle="" class="no-submenu">
+                  <a href="security_edit.html" title="security_edit" data-toggle="" class="no-submenu">
                      <span class="item-text">security_edit</span>
                   </a>
                </li>
