--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -1,21 +1,13 @@
-<script type="text/javascript">
-   var dashboard = {}
-
-   dashboard.add_cloud = function() {
-      route("cloud_add")
-   }
-
-</script>
 
 <nav role="navigation" class="navbar navbar-default navbar-top navbar-fixed-top">
     <!-- START navbar header-->
     <div class="navbar-header">
       <a href="pages/landing_ori.html" class="navbar-brand">
          <div class="brand-logo">
-            <img src="app/img/logo.png" alt="App Logo" class="img-responsive">
+            <img src="/app/img/logo.png" alt="App Logo" class="img-responsive">
          </div>
          <div class="brand-logo-collapsed">
-            <img src="app/img/logo-single.png" alt="App Logo" class="img-responsive">
+            <img src="/app/img/logo-single.png" alt="App Logo" class="img-responsive">
          </div>
       </a>
     </div>
