--- a/views/cloudadd.html
+++ b/views/cloudadd.html
@@ -1,97 +1,119 @@
-<div class="main-content" style="text-align: center;">
-    <h3>Page title (cloud_add)
-        <br>
-        <small>Subtitle</small>
-     </h3>
-     <div class="row" style="text-align: center; padding-bottom: 50px;">
-         <div class="col-lg-12">
-            <h3>필요한 서비스를 선택해주세요</p>
-         </div>
-         <div class="col-lg-12">
-            <h5 style="font-size: larger; color: grey;">호스팅 상품을 선택해주세요</p>
-         </div>
-     </div>
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="ie ie6 lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="ie ie7 lt-ie9 lt-ie8"        lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="ie ie8 lt-ie9"               lang="en"> <![endif]-->
+<!--[if IE 9]>    <html class="ie ie9"                      lang="en"> <![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-ie">
+<!--<![endif]-->
 
-     <div class="row" style="padding-bottom: 150px;">
-        <div class="col-lg-3">
-           <div class="box-placeholder" class="card">
-              <p id="option">1VCore</p>
-              <p id="option_detail">1GB RAM</p>
-              <p id="option_detail">30GB SSD</p>
-              <p id="option_detail">1TB</p>
-              <br>
-              <a href="#go-plan" class="mainbtn" >select</a>
-            </div>
-        </div>
-        <div class="col-lg-3">
-            <div class="box-placeholder" clsss="card">
-               <p id="option">2VCore</p>
-               <p id="option_detail">2GB RAM</p>
-               <p id="option_detail">30GB SSD</p>
-               <p id="option_detail">1TB</p>
-               <br>
-               <a href="#go-plan" class="mainbtn">select</a>
-            </div>
-        </div>
-        <div class="col-lg-3">
-            <div class="box-placeholder" class="card">
-               <p id="option">4VCore</p>
-               <p id="option_detail">4GB RAM</p>
-               <p id="option_detail">30GB SSD</p>
-               <p id="option_detail">1TB</p>
-               <br>
-               <a href="#go-plan" class="mainbtn" >select</a>
-            </div>
+<head>
+   <!-- Meta-->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+   <meta name="description" content="">
+   <meta name="keywords" content="">
+   <meta name="author" content="">
+   <title>Wintermin - Bootstrap Admin Theme</title> 
+</head>
+
+<body>
+   <!-- START Main wrapper-->
+   <div id="wrapper" class="wrapper">
+      <section id="content-area">
+         <div class="main-content" style="text-align: center;">
+            <h3>Page title (cloud_add)
+                <br>
+                <small>Subtitle</small>
+             </h3>
+             <div class="row" style="text-align: center; padding-bottom: 50px;">
+                 <div class="col-lg-12">
+                    <h3>필요한 서비스를 선택해주세요</p>
+                 </div>
+                 <div class="col-lg-12">
+                    <h5 style="font-size: larger; color: grey;">호스팅 상품을 선택해주세요</p>
+                 </div>
+             </div>
+        
+             <div class="row" style="padding-bottom: 150px;">
+                <div class="col-lg-3">
+                   <div class="box-placeholder" class="card">
+                      <p id="option">1VCore</p>
+                      <p id="option_detail">1GB RAM</p>
+                      <p id="option_detail">30GB SSD</p>
+                      <p id="option_detail">1TB</p>
+                      <br>
+                      <a href="#go-plan" class="mainbtn" >select</a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="box-placeholder" clsss="card">
+                       <p id="option">2VCore</p>
+                       <p id="option_detail">2GB RAM</p>
+                       <p id="option_detail">30GB SSD</p>
+                       <p id="option_detail">1TB</p>
+                       <br>
+                       <a href="#go-plan" class="mainbtn">select</a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="box-placeholder" class="card">
+                       <p id="option">4VCore</p>
+                       <p id="option_detail">4GB RAM</p>
+                       <p id="option_detail">30GB SSD</p>
+                       <p id="option_detail">1TB</p>
+                       <br>
+                       <a href="#go-plan" class="mainbtn" >select</a>
+                    </div>
+                </div> 
+                <div class="col-lg-3">
+                    <div class="box-placeholder" class="card">
+                       <p id="option">8VCore</p>
+                       <p id="option_detail">6GB RAM</p>
+                       <p id="option_detail">30GB SSD</p>
+                       <p id="option_detail">1TB</p>
+                       <br>
+                       <a href="#go-plan" class="mainbtn" >select</a>
+                    </div>        
+                 </div> 
+             </div>
+        
+        
+             <div id="go-plan" class="row">
+                 <div class="col-lg-12">
+                    <h3 style="padding-bottom: 10px;">서버이름과 호스트명을 입력해주세요</h3>
+                 </div>
+        
+                 <div class="col-lg-12" style="padding-left: 10%; padding-right: 10%;">
+                    <div id="nonebox" class="box-placeholder" style="padding-right: 10%; padding-left: 10%;">
+                       <div class="textbox">
+                          <label for="server_name">서버이름</label>
+                          <input type="text" id="server_name">
+                       </div>
+                       <div class="textbox">
+                          <label for="host_name">호스트명</label>
+                          <input type="text" id="host_name">
+                       </div>
+                    </div>
+                 </div>
+             </div>
+           
+             <div class="row">
+                <div class="col-lg-12">
+                    <h3 style="padding-top: 100px;">서버를 생성해서 자신만의 사이트를 운영하세요</h3>
+                </div>
+                <div class="col-lg-12">
+                 <h5 style="font-size: larger; color: grey; padding-bottom: 30px; ">서버생성 버튼을 누르면 서버가 생성됩니다</p>
+              </div>
+             </div> 
+             <div class="row">
+              <a href="cloudlist.html" class="opbtn" style="padding-left: 25px; padding-right: 25px; padding-top: 10px;padding-bottom: 10px; margin-bottom: 50px;"> 서버 생성 </a>
+             </div>
+            </div>  
         </div> 
-        <div class="col-lg-3">
-            <div class="box-placeholder" class="card">
-               <p id="option">8VCore</p>
-               <p id="option_detail">6GB RAM</p>
-               <p id="option_detail">30GB SSD</p>
-               <p id="option_detail">1TB</p>
-               <br>
-               <a href="#go-plan" class="mainbtn" >select</a>
-            </div>        
-         </div> 
-     </div>
+      </section> 
+   </div> 
+   <script src="/app/js/load.js"></script>
+</body>
 
-
-     <div id="go-plan" class="row">
-         <div class="col-lg-12">
-            <h3 style="padding-bottom: 10px;">서버이름과 호스트명을 입력해주세요</h3>
-         </div>
-
-         <div class="col-lg-12" style="padding-left: 10%; padding-right: 10%;">
-            <div id="nonebox" class="box-placeholder" style="padding-right: 10%; padding-left: 10%;">
-               <div class="textbox">
-                  <label for="server_name">서버이름</label>
-                  <input type="text" id="server_name">
-               </div>
-               <div class="textbox">
-                  <label for="host_name">호스트명</label>
-                  <input type="text" id="host_name">
-               </div>
-            </div>
-         </div>
-     </div>
-   
-     <div class="row">
-        <div class="col-lg-12">
-            <h3 style="padding-top: 100px;">서버를 생성해서 자신만의 사이트를 운영하세요</h3>
-        </div>
-        <div class="col-lg-12">
-         <h5 style="font-size: larger; color: grey; padding-bottom: 30px; ">서버생성 버튼을 누르면 서버가 생성됩니다</p>
-      </div>
-     </div>
-
-
-
-     <div class="row">
-      <a href="#cloudlist" class="opbtn" style="padding-left: 25px; padding-right: 25px; padding-top: 10px;padding-bottom: 10px; margin-bottom: 50px;"> 서버 생성 </a>
-     </div>
-    </div>
-    
-
-    
-    <footer>&copy; 2014 - Wintermin</footer>
-</div>
+</html>
