--- a/views/cloudlist.html
+++ b/views/cloudlist.html
@@ -1,12 +1,26 @@
-   <style>  
-   td a { 
-      display: block; 
-      border: 1px solid black;
-      padding: 16px; 
-   }
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="ie ie6 lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="ie ie7 lt-ie9 lt-ie8"        lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="ie ie8 lt-ie9"               lang="en"> <![endif]-->
+<!--[if IE 9]>    <html class="ie ie9"                      lang="en"> <![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-ie">
+<!--<![endif]-->
 
-   </style>  
-         <!-- START Page content-->
+<head>
+   <!-- Meta-->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+   <meta name="description" content="">
+   <meta name="keywords" content="">
+   <meta name="author" content="">
+   <title>Wintermin - Bootstrap Admin Theme</title> 
+</head>
+
+<body>
+   <!-- START Main wrapper-->
+   <div id="wrapper" class="wrapper">
+      <section id="content-area">
          <div class="main-content">
             <h3>Server Status (cloud_list)
                <br>
@@ -52,12 +66,14 @@
             </div>
             <!-- END row-->
             <div class="container">
-               <a href="#cloudadd" class="mainbtn" style="align-items: center;">클라우드 추가</a>
+               <a href="cloudadd.html" class="mainbtn" style="align-items: center;">클라우드 추가</a>
             </div>
             
 
          </div>
-         
-         <footer>&copy; 2014 - Wintermin</footer>
-         <!-- END Page Footer-->
- 
+      </section> 
+   </div> 
+   <script src="/app/js/load.js"></script>
+</body>
+
+</html>
