--- a/views/security_edit.html
+++ b/views/security_edit.html
@@ -1,72 +1,101 @@
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="ie ie6 lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="ie ie7 lt-ie9 lt-ie8"        lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="ie ie8 lt-ie9"               lang="en"> <![endif]-->
+<!--[if IE 9]>    <html class="ie ie9"                      lang="en"> <![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-ie">
+<!--<![endif]-->
 
-<div class="main-content">
-    <div class="row">
-        <!-- START panel-->
-        <div class="panel panel-default">
-           <div class="panel-heading">Horizontal form</div>
-           <div class="panel-body">
-              <form class="form-horizontal">
-                 <div class="form-group">
-                    <label class="col-lg-2 control-label">Email</label>
-                    <div class="col-lg-10">
-                       <input type="email" placeholder="Email" class="form-control">
-                    </div>
-                 </div>
-                 <div class="form-group">
-                    <label class="col-lg-2 control-label">Password</label>
-                    <div class="col-lg-10">
-                       <input type="password" placeholder="Password" class="form-control">
-                    </div>
-                 </div>
-                 <div class="form-group">
-                    <div class="col-lg-offset-2 col-lg-10">
-                       <div class="checkbox c-checkbox">
-                          <label>
-                             <input type="checkbox" checked="">
-                             <span class="fa fa-check"></span>Remember me</label>
-                       </div>
-                    </div>
-                 </div>
+<head>
+   <!-- Meta-->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+   <meta name="description" content="">
+   <meta name="keywords" content="">
+   <meta name="author" content="">
+   <title>Wintermin - Bootstrap Admin Theme</title> 
+</head>
 
-                 <fieldset class="last-child">
-                    <div class="form-group">
-                       <label class="col-sm-2 control-label">Select</label>
-                       <div class="col-sm-10">
-                          <select name="account" class="form-control m-b">
-                             <option>Option 1</option>
-                             <option>Option 2</option>
-                             <option>Option 3</option>
-                             <option>Option 4</option>
-                          </select>
-                       </div>
-                    </div>
-                 </fieldset>
-                 <fieldset>
-                    <div class="form-group">
-                       <label class="col-sm-2 control-label">Rounded</label>
-                       <div class="col-sm-10">
-                          <label class="checkbox c-checkbox c-checkbox-rounded">
-                             <input id="roundedcheckbox10" type="checkbox" checked>
-                             <span class="fa fa-check"></span>Lorem</label>
-                          <label class="checkbox c-checkbox c-checkbox-rounded">
-                             <input id="roundedcheckbox20" type="checkbox">
-                             <span class="fa fa-check"></span>Ipsum</label>
-                       </div>
-                    </div>
-                 </fieldset>
+<body>
+   <!-- START Main wrapper-->
+   <div id="wrapper" class="wrapper">
+      <section id="content-area">
 
-                 <div class="form-group">
-                    <div class="col-lg-offset-2 col-lg-10">
-                       <button type="submit" class="btn btn-sm btn-default">Sign in</button>
-                    </div>
-                 </div>
-              </form>
-           </div>
-        </div>
-        <!-- END panel-->
-     </div>
-    
+         <div class="main-content">
+            <div class="row">
+                <!-- START panel-->
+                <div class="panel panel-default">
+                   <div class="panel-heading">Horizontal form</div>
+                   <div class="panel-body">
+                      <form class="form-horizontal">
+                         <div class="form-group">
+                            <label class="col-lg-2 control-label">Email</label>
+                            <div class="col-lg-10">
+                               <input type="email" placeholder="Email" class="form-control">
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <label class="col-lg-2 control-label">Password</label>
+                            <div class="col-lg-10">
+                               <input type="password" placeholder="Password" class="form-control">
+                            </div>
+                         </div>
+                         <div class="form-group">
+                            <div class="col-lg-offset-2 col-lg-10">
+                               <div class="checkbox c-checkbox">
+                                  <label>
+                                     <input type="checkbox" checked="">
+                                     <span class="fa fa-check"></span>Remember me</label>
+                               </div>
+                            </div>
+                         </div>
+        
+                         <fieldset class="last-child">
+                            <div class="form-group">
+                               <label class="col-sm-2 control-label">Select</label>
+                               <div class="col-sm-10">
+                                  <select name="account" class="form-control m-b">
+                                     <option>Option 1</option>
+                                     <option>Option 2</option>
+                                     <option>Option 3</option>
+                                     <option>Option 4</option>
+                                  </select>
+                               </div>
+                            </div>
+                         </fieldset>
+                         <fieldset>
+                            <div class="form-group">
+                               <label class="col-sm-2 control-label">Rounded</label>
+                               <div class="col-sm-10">
+                                  <label class="checkbox c-checkbox c-checkbox-rounded">
+                                     <input id="roundedcheckbox10" type="checkbox" checked>
+                                     <span class="fa fa-check"></span>Lorem</label>
+                                  <label class="checkbox c-checkbox c-checkbox-rounded">
+                                     <input id="roundedcheckbox20" type="checkbox">
+                                     <span class="fa fa-check"></span>Ipsum</label>
+                               </div>
+                            </div>
+                         </fieldset>
+        
+                         <div class="form-group">
+                            <div class="col-lg-offset-2 col-lg-10">
+                               <button type="submit" class="btn btn-sm btn-default">Sign in</button>
+                            </div>
+                         </div>
+                      </form>
+                   </div>
+                </div>
+                <!-- END panel-->
+             </div>
+            
+        
+        
+        
+         </div>
+      </section> 
+   </div> 
+   <script src="/app/js/load.js"></script>
+</body>
 
-
-
- </div>
+</html>
