--- a/views/security_group.html
+++ b/views/security_group.html
@@ -1,39 +1,65 @@
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="ie ie6 lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="ie ie7 lt-ie9 lt-ie8"        lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="ie ie8 lt-ie9"               lang="en"> <![endif]-->
+<!--[if IE 9]>    <html class="ie ie9"                      lang="en"> <![endif]-->
+<!--[if !IE]><!-->
+<html lang="en" class="no-ie">
+<!--<![endif]-->
 
-<style>
-    [data-href] { cursor: pointer; }
-</style>
-<div class="main-content">
-    <h3>security_group
-       <br>
-       <small>Bootstrap Responsive tables</small>
-    </h3>
-    
-    <div class="row">
-       <div class="col-lg-12">
-          <div class="panel panel-default">
-             <div class="panel-body">
-                <div class="table-responsive">
-                   <table class="table table-hover">
-                      <thead>
-                        
-                         <tr>
-                            <th>SecurityGroup Name</th>
-                            <th>Group ID</th>
-                            <th>Status</th>
-                         </tr>
-                      </thead>
-                      <tbody>
-                        <tr onclick="window.location='..';" style="font-weight:lighter;">
-                            <th>Group1</th>
-                            <th>hj-23</th>
-                            <th>None</th>
-                        </tr>
-                      </tbody>
-                   </table>
-                </div>
-             </div>
-          </div>
-       </div>
-        
-    </div>
- </div>
+<head>
+   <!-- Meta-->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+   <meta name="description" content="">
+   <meta name="keywords" content="">
+   <meta name="author" content="">
+   <title>Wintermin - Bootstrap Admin Theme</title> 
+</head>
+
+<body>
+   <!-- START Main wrapper-->
+   <div id="wrapper" class="wrapper">
+      <section id="content-area">
+ 
+         <div class="main-content">
+            <h3>security_group
+               <br>
+               <small>Bootstrap Responsive tables</small>
+            </h3>
+            
+            <div class="row">
+               <div class="col-lg-12">
+                  <div class="panel panel-default">
+                     <div class="panel-body">
+                        <div class="table-responsive">
+                           <table class="table table-hover">
+                              <thead>
+                                
+                                 <tr>
+                                    <th>SecurityGroup Name</th>
+                                    <th>Group ID</th>
+                                    <th>Status</th>
+                                 </tr>
+                              </thead>
+                              <tbody>
+                                <tr  style="font-weight:lighter;">
+                                    <td><a href="security_detail.html">Group 1</a></td>
+                                    <td>hj-23</td>
+                                    <td>None</td>
+                                </tr>
+                              </tbody>
+                           </table>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+                
+            </div>
+         </div>
+      </section> 
+   </div> 
+   <script src="/app/js/load.js"></script>
+</body>
+
+</html>
